# SearxNG-MCP-Server

./: AGENTS.md  Makefile  README.md  pyproject.toml  requirements.txt
src/searxng_mcp_server/: config.py  main.py  models.py  tools.py
